[project]
name = "ghdl"
description = "Binary Manager for Github Releases"
authors = [{name = "Imran Khan", email = "imran@khan.ovh"}]
license = {file = "LICENSE"}
requires-python = ">=3.8,<3.14"
dynamic = ["version"]
dependencies = [
  "xtract ==0.1a3",
  "xdg >=4.0.1",
  "python-dateutil >=2.8.1",
  "docopt >=0.6.2",
  "python-magic >=0.4.25",
  "hyrule >=0.7.0",
  "hy >=1.0.0",
  "httpx >=0.27.0"
]

[tool.setuptools]
script-files = ["bin/ghdl", "bin/ghdl-delete-repo"]
include-package-data = true

[tool.setuptools.dynamic]
version = {attr = "ghdl.__version__"}

[tool.uv]
prerelease = "if-necessary-or-explicit"
python-downloads = "never"
python-preference = "system"
dev-dependencies = []

[tool.hatch.version]
path = "ghdl/__init__.py"

[build-system]
#requires = ["setuptools"]
#build-backend = "setuptools.build_meta"
requires = ["hatchling"]
build-backend = "hatchling.build"
